--- a/DotnetToolset.Patterns/Resources/Literals.resx
+++ b/DotnetToolset.Patterns/Resources/Literals.resx
@@ -135,6 +135,9 @@
   <data name="p_ErrorGettingDtoOfTypeX" xml:space="preserve">
     <value>An error has occurred when getting a DTO of type {0}</value>
   </data>
+  <data name="p_ErrorGettingValidationRules" xml:space="preserve">
+    <value>An error has occurred when getting the validation rules for {0}</value>
+  </data>
   <data name="p_RuleIsIntegerNotPassed" xml:space="preserve">
     <value>Range rule did not pass since its value is not ant integer</value>
   </data>
